Fixed bug with statistical modifiers query; Fixed autocomplete taxon selection; Fixed tab spacing for data tab; Fixed header background color for admin pages

--- a/app/assets/stylesheets/accessibility.sass
+++ b/app/assets/stylesheets/accessibility.sass
@@ -1351,12 +1351,6 @@ table.classifications
     line-height: 0
     border-width: 1px 0 0 0
 
-ul.tabs
-  .end_section
-    margin-bottom: 20px
-  .start_section
-    margin-top: 20px
-
 .main_container .empty.about
   text-align: left
   div.button
@@ -1796,6 +1790,10 @@ span.info
   ul
     li
       margin-top: 4px
+      &.end_section
+        margin-bottom: 20px
+      &.start_section
+        margin-top: 20px
 .glossary
   h3
     font-size: 1.6em
