--- a/app/assets/stylesheets/common.sass
+++ b/app/assets/stylesheets/common.sass
@@ -5,7 +5,7 @@ body
   font-family: Helvetica, Arial, sans-serif
   font-size: 75%
   color: #394651
-  border-top: $global_nav_height solid #28323a
+  border-top: $global_nav_height solid #d1e163  /* BANNER - remove this */
   min-width: 940px
 body, html
   background: #394651
